-overflow chrome fixed

--- a/style.css
+++ b/style.css
@@ -32,6 +32,32 @@ h1 {    font-size: 2em; }
 h2 {    font-size: 1.7em; }
 h3 {    font-size: 1.5em; }
 	
+.body,
+.wrapper {
+  /* Break the flow */
+  /*position: absolute;*/
+  top: 0px;
+
+  /* Give them all the available space */
+  width: 100%;
+  height: 100%;
+
+  /* Remove the margins if any */
+  margin: 0;
+
+  /* Allow them to scroll down the document */
+  overflow-y: hidden;
+}
+
+.body {
+  /* Sending body at the bottom of the stack */
+  z-index: 1;
+}
+
+.wrapper {
+  /* Making the wrapper stack above the body */
+  z-index: 2;
+}
 
 html, body {
 	width:100%;
